# Run-TOGT-Planner

./: .gitignore  LICENSE  README.md  gate_test.py  plan_race_example.py  pypi_description.md  pyproject.toml  random_race_example.py  run_traj_planner.py
docs/: utils_manual.md
examples/: draw_tube.py  plan_race_example.py  random_race_example.py  reward_flow.py
resources/racetrack/: example.yaml  figure8.yaml  race_mini_uzh_19g.yaml  race_uzh_19g.yaml  race_uzh_19wp.yaml  test.yaml
run_togt_planner/RaceGenerator/: BaseRaceClass.py  GateShape.py  GenerationTools.py  RaceTrack.py
run_togt_planner/RaceVisualizer/: RacePlotter.py  track.py
test_utils/: gate_test.py  plot_sigmoid.py  reward_flow.py  run_traj_planner.py
traj_planner/: traj_planner_togt.cpp
utils/RaceGenerator/: BaseRaceClass.py  GateShape.py  GenerationTools.py  RaceClass.py  RaceTrack.py
utils/RaceVisualizer/: RacePlotter.py
utils/race_generator/: GateShape.py  RaceTrackClass.py  race_class.py
